src/main/resources/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brightlizard-otus-k8s-app-deployment
  labels:
    app: brightlizard-otus-k8s-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brightlizard-otus-k8s-app
  template:
    metadata:
      labels:
        app: brightlizard-otus-k8s-app
    spec:
      containers:
        - name: brightlizard-otus-k8s-app
          image: brightlizard/brightlizard-otus-k8s-app:1.0.3
          ports:
            - containerPort: 8000
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - curl -s --fail http://localhost:8000/health > /dev/null
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - curl -s --fail http://localhost:8000/health > /dev/null
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 60
          volumeMounts:
            - name: init-db
              mountPath: "/db"
              readOnly: true
      volumes:
        - name: init-db
          configMap:
            name: brightlizard-otus-k8s-app-config
            items:
              - key: "init.sql"
                path: "init.sql"
