src/main/resources/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brightlizard-otus-k8s-app-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
#  ingressClassName: nginx-example
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: brightlizard-otus-k8s-app-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/postgres"
            backend:
              service:
                name: brightlizard-otus-k8s-app-service-postgres
                port:
                  number: 5432
